--- a/lepton.css
+++ b/lepton.css
@@ -77,12 +77,12 @@ button:focus, button:focus-visible {
     outline: none;
     box-shadow: 0 0.25rem 0.25rem #0002;
 }
-button.primary {
+button.btn-primary {
     background-color: rgb(var(--primary-color-500));
     border: 1px solid rgb(var(--primary-color-600));
     color: rgb(var(--primary-color-50));
 }
-button.secondary {
+button.btn-secondary {
     background-color: rgb(var(--secondary-color-500));
     border: 1px solid rgb(var(--secondary-color-600));
     color: rgb(var(--secondary-color-50));
