--- a/lepton.css
+++ b/lepton.css
@@ -89,11 +89,11 @@ button.btn-secondary {
 }
 @media (hover: hover) and (pointer: fine) {
     button:hover {
-        box-shadow: inset 0 0 0 100vw rgba(0, 0, 0, 0.03), 0 0.125rem 0.25rem #0002;
+        box-shadow: inset 0 0 0 100vw rgba(0, 0, 0, 0.03), 0 0.25rem 0.25rem #0002;
     }
 }
 button:active {
-    box-shadow: inset 0 0 0 100vw rgba(0, 0, 0, 0.06), 0 0.125rem 0.25rem #0002;
+    box-shadow: inset 0 0 0 100vw rgba(0, 0, 0, 0.06), 0 0.25rem 0.25rem #0002;
 }
 
 a {
@@ -224,10 +224,24 @@ input[type="range"]::-webkit-slider-thumb {
     cursor: pointer;
 }
 input[type="range"]:focus::-webkit-slider-runnable-track {
-    box-shadow: 0 0.125rem 0.25rem #0008;
+    box-shadow: 0 0.25rem 0.25rem #0002;
 }
 input[type="range"]:focus::-webkit-slider-thumb {
-    box-shadow: 0 0.125rem 0.25rem #0008;
+    box-shadow: 0 0.25rem 0.25rem #0002;
+}
+@media (hover: hover) and (pointer: fine) {
+    input[type="range"]:hover::-webkit-slider-runnable-track {
+        box-shadow: inset 0 0 0 100vw rgba(0, 0, 0, 0.03), 0 0.25rem 0.25rem #0002;
+    }
+    input[type="range"]:hover::-webkit-slider-thumb {
+        box-shadow: inset 0 0 0 100vw rgba(0, 0, 0, 0.03), 0 0.25rem 0.25rem #0002;
+    }
+}
+input[type="range"]:active::-webkit-slider-runnable-track {
+    box-shadow: inset 0 0 0 100vw rgba(0, 0, 0, 0.06), 0 0.25rem 0.25rem #0002;
+}
+input[type="range"]:active::-webkit-slider-thumb {
+    box-shadow: inset 0 0 0 100vw rgba(0, 0, 0, 0.06), 0 0.25rem 0.25rem #0002;
 }
 
 textarea {
@@ -240,7 +254,6 @@ textarea {
  */
 .card {
     background-color: rgb(var(--neutral-color-100));
-    background-color: white;
     border-radius: 1.5rem;
     padding: 1rem;
 }
@@ -255,7 +268,7 @@ textarea {
 }
 .flex.col,
 .inline-flex.col {
-    flex-direction: col;
+    flex-direction: column;
 }
 .flex.row,
 .inline-flex.row {
@@ -277,6 +290,74 @@ textarea {
 .flex.gap-3,
 .inline-flex.gap-3 {
     gap: 0.75rem;
+}
+.flex.gap-4,
+.inline-flex.gap-4 {
+    gap: 1rem;
+}
+.flex.gap-5,
+.inline-flex.gap-5 {
+    gap: 1.25rem;
+}
+.flex.gap-6,
+.inline-flex.gap-6 {
+    gap: 1.5rem;
+}
+.flex.gap-7,
+.inline-flex.gap-7 {
+    gap: 1.75rem;
+}
+.flex.gap-8,
+.inline-flex.gap-8 {
+    gap: 2rem;
+}
+.flex.gap-9,
+.inline-flex.gap-9 {
+    gap: 2.25rem;
+}
+.flex.gap-10,
+.inline-flex.gap-10 {
+    gap: 2.5rem;
+}
+.flex.gap-11,
+.inline-flex.gap-11 {
+    gap: 2.75rem;
+}
+.flex.gap-12,
+.inline-flex.gap-12 {
+    gap: 3rem;
+}
+.flex.gap-13,
+.inline-flex.gap-13 {
+    gap: 3.25rem;
+}
+.flex.gap-14,
+.inline-flex.gap-14 {
+    gap: 3.5rem;
+}
+.flex.gap-15,
+.inline-flex.gap-15 {
+    gap: 3.75rem;
+}
+.flex.gap-16,
+.inline-flex.gap-16 {
+    gap: 4rem;
+}
+.flex.gap-17,
+.inline-flex.gap-17 {
+    gap: 4.25rem;
+}
+.flex.gap-18,
+.inline-flex.gap-18 {
+    gap: 4.5rem;
+}
+.flex.gap-19,
+.inline-flex.gap-19 {
+    gap: 4.75rem;
+}
+.flex.gap-20,
+.inline-flex.gap-20 {
+    gap: 5rem;
 }
 
 .grid {
@@ -440,6 +521,367 @@ textarea {
 }
 .bg-neutral-color-50 {
     background-color: rgb(var(--neutral-color-50));
+}
+
+.bd-0px {
+    border: 0px solid black;
+}
+.bd-1px {
+    border: 1px solid black;
+}
+.bd-2px {
+    border: 2px solid black;
+}
+.bd-3px {
+    border: 3px solid black;
+}
+.bd-4px {
+    border: 4px solid black;
+}
+.bd-5px {
+    border: 5px solid black;
+}
+.bd-6px {
+    border: 6px solid black;
+}
+.bd-7px {
+    border: 7px solid black;
+}
+.bd-8px {
+    border: 8px solid black;
+}
+.bd-9px {
+    border: 9px solid black;
+}
+.bd-10px {
+    border: 10px solid black;
+}
+.bd-11px {
+    border: 11px solid black;
+}
+.bd-12px {
+    border: 12px solid black;
+}
+.bd-13px {
+    border: 13px solid black;
+}
+.bd-14px {
+    border: 14px solid black;
+}
+.bd-15px {
+    border: 15px solid black;
+}
+.bd-16px {
+    border: 16px solid black;
+}
+.bd-17px {
+    border: 17px solid black;
+}
+.bd-18px {
+    border: 18px solid black;
+}
+.bd-19px {
+    border: 19px solid black;
+}
+.bd-20px {
+    border: 20px solid black;
+}
+
+.bd-0 {
+    border: 0rem solid black;
+}
+.bd-1 {
+    border: 0.25rem solid black;
+}
+.bd-2 {
+    border: 0.5rem solid black;
+}
+.bd-3 {
+    border: 0.75rem solid black;
+}
+.bd-4 {
+    border: 1rem solid black;
+}
+.bd-5 {
+    border: 1.25rem solid black;
+}
+.bd-6 {
+    border: 1.5rem solid black;
+}
+.bd-7 {
+    border: 1.75rem solid black;
+}
+.bd-8 {
+    border: 2rem solid black;
+}
+.bd-9 {
+    border: 2.25rem solid black;
+}
+.bd-10 {
+    border: 2.5rem solid black;
+}
+
+
+.bd-primary-color-950 {
+    border-color: rgb(var(--primary-color-950));
+}
+.bd-primary-color-900 {
+    border-color: rgb(var(--primary-color-900));
+}
+.bd-primary-color-800 {
+    border-color: rgb(var(--primary-color-800));
+}
+.bd-primary-color-700 {
+    border-color: rgb(var(--primary-color-700));
+}
+.bd-primary-color-600 {
+    border-color: rgb(var(--primary-color-600));
+}
+.bd-primary-color-500 {
+    border-color: rgb(var(--primary-color-500));
+}
+.bd-primary-color-400 {
+    border-color: rgb(var(--primary-color-400));
+}
+.bd-primary-color-300 {
+    border-color: rgb(var(--primary-color-300));
+}
+.bd-primary-color-200 {
+    border-color: rgb(var(--primary-color-200));
+}
+.bd-primary-color-100 {
+    border-color: rgb(var(--primary-color-100));
+}
+.bd-primary-color-50 {
+    border-color: rgb(var(--primary-color-50));
+}
+.bd-secondary-color-950 {
+    border-color: rgb(var(--secondary-color-950));
+}
+.bd-secondary-color-900 {
+    border-color: rgb(var(--secondary-color-900));
+}
+.bd-secondary-color-800 {
+    border-color: rgb(var(--secondary-color-800));
+}
+.bd-secondary-color-700 {
+    border-color: rgb(var(--secondary-color-700));
+}
+.bd-secondary-color-600 {
+    border-color: rgb(var(--secondary-color-600));
+}
+.bd-secondary-color-500 {
+    border-color: rgb(var(--secondary-color-500));
+}
+.bd-secondary-color-400 {
+    border-color: rgb(var(--secondary-color-400));
+}
+.bd-secondary-color-300 {
+    border-color: rgb(var(--secondary-color-300));
+}
+.bd-secondary-color-200 {
+    border-color: rgb(var(--secondary-color-200));
+}
+.bd-secondary-color-100 {
+    border-color: rgb(var(--secondary-color-100));
+}
+.bd-secondary-color-50 {
+    border-color: rgb(var(--secondary-color-50));
+}
+.bd-neutral-color-950 {
+    border-color: rgb(var(--neutral-color-950));
+}
+.bd-neutral-color-900 {
+    border-color: rgb(var(--neutral-color-900));
+}
+.bd-neutral-color-800 {
+    border-color: rgb(var(--neutral-color-800));
+}
+.bd-neutral-color-700 {
+    border-color: rgb(var(--neutral-color-700));
+}
+.bd-neutral-color-600 {
+    border-color: rgb(var(--neutral-color-600));
+}
+.bd-neutral-color-500 {
+    border-color: rgb(var(--neutral-color-500));
+}
+.bd-neutral-color-400 {
+    border-color: rgb(var(--neutral-color-400));
+}
+.bd-neutral-color-300 {
+    border-color: rgb(var(--neutral-color-300));
+}
+.bd-neutral-color-200 {
+    border-color: rgb(var(--neutral-color-200));
+}
+.bd-neutral-color-100 {
+    border-color: rgb(var(--neutral-color-100));
+}
+.bd-neutral-color-50 {
+    border-color: rgb(var(--neutral-color-50));
+}
+
+.round-0 {
+    border-radius: 0rem;
+}
+.round-1 {
+    border-radius: 0.25rem;
+}
+.round-2 {
+    border-radius: 0.5rem;
+}
+.round-3 {
+    border-radius: 0.75rem;
+}
+.round-4 {
+    border-radius: 1rem;
+}
+.round-5 {
+    border-radius: 1.25rem;
+}
+.round-6 {
+    border-radius: 1.5rem;
+}
+.round-7 {
+    border-radius: 1.75rem;
+}
+.round-8 {
+    border-radius: 2rem;
+}
+.round-9 {
+    border-radius: 2.25rem;
+}
+.round-10 {
+    border-radius: 2.5rem;
+}
+.round-11 {
+    border-radius: 2.75rem;
+}
+.round-12 {
+    border-radius: 3rem;
+}
+.round-13 {
+    border-radius: 3.25rem;
+}
+.round-14 {
+    border-radius: 3.5rem;
+}
+.round-15 {
+    border-radius: 3.75rem;
+}
+.round-16 {
+    border-radius: 4rem;
+}
+.round-17 {
+    border-radius: 4.25rem;
+}
+.round-18 {
+    border-radius: 4.5rem;
+}
+.round-19 {
+    border-radius: 4.75rem;
+}
+.round-20 {
+    border-radius: 5rem;
+}
+
+.pad-0 {
+    padding: 0rem;
+}
+.pad-1 {
+    padding: 0.25rem;
+}
+.pad-2 {
+    padding: 0.5rem;
+}
+.pad-3 {
+    padding: 0.75rem;
+}
+.pad-4 {
+    padding: 1rem;
+}
+.pad-5 {
+    padding: 1.25rem;
+}
+.pad-6 {
+    padding: 1.5rem;
+}
+.pad-7 {
+    padding: 1.75rem;
+}
+.pad-8 {
+    padding: 2rem;
+}
+.pad-9 {
+    padding: 2.25rem;
+}
+.pad-10 {
+    padding: 2.5rem;
+}
+.pad-11 {
+    padding: 2.75rem;
+}
+.pad-12 {
+    padding: 3rem;
+}
+.pad-13 {
+    padding: 3.25rem;
+}
+.pad-14 {
+    padding: 3.5rem;
+}
+.pad-15 {
+    padding: 3.75rem;
+}
+.pad-16 {
+    padding: 4rem;
+}
+.pad-17 {
+    padding: 4.25rem;
+}
+.pad-18 {
+    padding: 4.5rem;
+}
+.pad-19 {
+    padding: 4.75rem;
+}
+.pad-20 {
+    padding: 5rem;
+}
+
+.trans-duration-0 {
+    transition: 0s all;
+}
+.trans-duration-1 {
+    transition: 0.1s all;
+}
+.trans-duration-2 {
+    transition: 0.2s all;
+}
+.trans-duration-3 {
+    transition: 0.3s all;
+}
+.trans-duration-4 {
+    transition: 0.4s all;
+}
+.trans-duration-5 {
+    transition: 0.5s all;
+}
+.trans-duration-6 {
+    transition: 0.6s all;
+}
+.trans-duration-7 {
+    transition: 0.7s all;
+}
+.trans-duration-8 {
+    transition: 0.8s all;
+}
+.trans-duration-9 {
+    transition: 0.9s all;
+}
+.trans-duration-10 {
+    transition: 1s all;
 }
 
 .w-0 {
@@ -1645,6 +2087,9 @@ textarea {
 .w-400 {
     width: 100rem; /* default: 1600px */
 }
+.w-full {
+    width: 100%;
+}
 .h-0 {
     height: 0rem; /* default: 0px */
 }
@@ -2847,6 +3292,9 @@ textarea {
 }
 .h-400 {
     height: 100rem; /* default: 1600px */
+}
+.h-full {
+    height: 100%;
 }
 .wh-0 {
     width: 0rem; /* default: 0px */
@@ -4451,4 +4899,8 @@ textarea {
 .wh-400 {
     width: 100rem; /* default: 1600px */
     height: 100rem; /* default: 1600px */
+}
+.wh-full {
+    width: 100%;
+    height: 100%;
 }
