--- a/lepton-flex-util.css
+++ b/lepton-flex-util.css
@@ -23,6 +23,9 @@
 .contents-center {
     justify-content: center;
 }
+.contents-space-between {
+    justify-content: space-between;
+}
 
 .flex-wrap {
     flex-wrap: wrap;
