--- a/scss/lepton-size-util.scss
+++ b/scss/lepton-size-util.scss
@@ -80,3 +80,33 @@ $dimensions: (
         }
     }
 }
+.wh-full {
+    width: 100%;
+    height: 100%;
+}
+.min-wh-full {
+    min-width: 100%;
+    min-height: 100%;
+}
+.max-wh-full {
+    max-width: 100%;
+    max-height: 100%;
+}
+.w-full {
+    width: 100%;
+}
+.min-w-full {
+    min-width: 100%;
+}
+.max-w-full {
+    max-width: 100%;
+}
+.h-full {
+    height: 100%;
+}
+.min-h-full {
+    min-height: 100%;
+}
+.max-h-full {
+    max-height: 100%;
+}
